Fixed some layout problem (#13)

--- a/src/routes/Dashboard/Dashboard.module.css
+++ b/src/routes/Dashboard/Dashboard.module.css
@@ -157,7 +157,7 @@ body {
 .bellIcon {
   color: #fff; /* White icon color */
   margin: 40px; /* Space between search bar and bell icon */
-  color: rgb(0, 0, 0) !important; 
+  color: rgb(0, 0, 0) !important;
 }
 
 .bellIcon {
@@ -231,8 +231,6 @@ body {
 .heartRateWindow {
   flex: 1 1 calc(65% - 20px);
   margin: 10px;
-  background-color: #2E3944 ;
-  width: 75%;
   background-color: #e97462 ;
   border-radius: 8px;
   padding: 20px;
@@ -266,8 +264,6 @@ body {
   max-width: calc(50% - 40px);
   flex: 1 1 calc(50% - 20px);
   margin: 10px;
-  background-color: #2E3944;
-  width: 35%;  
   background-color: #e97462;
   border-radius: 8px;
   padding: 20px;
@@ -286,8 +282,6 @@ body {
   max-width: calc(20% - 20px);
   flex: 1 1 calc(20% - 20px);
   margin: 10px;
-  background-color: #2E3944;
-  width: 30%;  
   background-color: #e97462;
   border-radius: 8px;
   padding: 20px;
@@ -307,8 +301,6 @@ body {
   max-width: calc(30% - 40px);
   flex: 1 1 calc(30% - 20px);
   margin: 10px;
-  background-color: #2E3944;
-  width: 15%;  
   background-color: #e97462;
   border-radius: 8px;
   padding: 20px;
@@ -326,11 +318,8 @@ body {
 
 .componentTextVO2{
   font-size: 18px;
-  color: white;
   margin-bottom: 10px;
-  font-size: 18px; 
-  color: rgb(0, 0, 0); 
-  margin-bottom: 10px; 
+  color: rgb(0, 0, 0);
   margin-top: 20px;
   text-align: center;
 }
@@ -340,9 +329,6 @@ body {
   flex: 1 1 30%;
   margin: 10px;
   align-self: center;
-  /*width: 50%;*/
-  background-color: #2E3944;
-  width: 50%;
   background-color: #e97462;
   border-radius: 8px;
   padding: 20px;
@@ -362,8 +348,6 @@ body {
   flex: 1 1 30%;
   margin: 10px;
   padding: 20px;
-  background-color: #2E3944 ;  /* Light background for the calendar */
-  color:white;            /* Dark text for better visibility */
   background-color: #e97462 ;  /* Light background for the calendar */
   color:rgb(0, 0, 0);            /* Dark text for better visibility */
   border-radius: 8px;        /* Optional: rounded corners */
